iot-cloud2 MyBatis应用案例代码完成

--- a/iot-cloud2/iot-cloud-commons/pom.xml
+++ b/iot-cloud2/iot-cloud-commons/pom.xml
@@ -17,6 +17,13 @@
     <description></description>
 
     <dependencies>
+        <!-- Spring Begin -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <!-- Spring End -->
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
