--- a/iot-cloud3/iot-cloud-dependencies/pom.xml
+++ b/iot-cloud3/iot-cloud-dependencies/pom.xml
@@ -38,6 +38,9 @@
         <mysql-connector-java.version>8.0.19</mysql-connector-java.version>
         <mybatis.version>3.5.4</mybatis.version>
         <mybatis-spring.version>2.0.3</mybatis-spring.version>
+
+        <!-- Jackson -->
+        <jackson.version>2.9.9</jackson.version>
     </properties>
 
     <dependencyManagement>
@@ -135,6 +138,19 @@
                 <version>${spring.version}</version>
             </dependency>
             <!-- Database End -->
+
+            <!-- Jackson Begin -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <!-- Jackson End -->
 
         </dependencies>
     </dependencyManagement>
