分页功能实现

--- a/iot-cloud3/iot-cloud-domain/pom.xml
+++ b/iot-cloud3/iot-cloud-domain/pom.xml
@@ -16,4 +16,11 @@
     <name>iot-cloud-domain</name>
     <description></description>
 
+    <dependencies>
+        <dependency>
+            <groupId>net.work100.training.stage2</groupId>
+            <artifactId>iot-cloud-commons</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 </project>
