--- a/iot-cloud2/iot-cloud-web-admin/src/main/resources/iot-admin.properties
+++ b/iot-cloud2/iot-cloud-web-admin/src/main/resources/iot-admin.properties
@@ -7,7 +7,7 @@
 jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.connectionURL=jdbc:mysql://192.168.100.35:3306/training-iot-cloud?useUnicode=true&characterEncoding=utf-8&useSSL=false
 jdbc.username=root
-jdbc.password=7968362
+jdbc.password=123456
 
 # JDBC Pool
 jdbc.pool.init=1
