Spring事务管理 - 实例准备

--- a/iot-cloud3/iot-cloud-commons/pom.xml
+++ b/iot-cloud3/iot-cloud-commons/pom.xml
@@ -48,6 +48,10 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+        </dependency>
         <!-- Database End -->
 
         <!-- Jackson Begin -->
