Spring事务管理案例完成

--- a/iot-cloud3/iot-cloud-dependencies/pom.xml
+++ b/iot-cloud3/iot-cloud-dependencies/pom.xml
@@ -56,6 +56,17 @@
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aspects</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>${spring.version}</version>
+                <scope>compile</scope>
+            </dependency>
             <!-- Spring End -->
 
             <!-- Test Begin -->
