--- a/iot-cloud3/iot-cloud-commons/pom.xml
+++ b/iot-cloud3/iot-cloud-commons/pom.xml
@@ -22,6 +22,14 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
         <!-- Spring End -->
 
         <!-- Servlet Begin -->
