--- a/iot-cloud3/iot-cloud-web-console/pom.xml
+++ b/iot-cloud3/iot-cloud-web-console/pom.xml
@@ -15,4 +15,27 @@
 
     <name>iot-cloud-web-console</name>
     <description></description>
+
+    <dependencies>
+        <dependency>
+            <groupId>net.work100.training.stage2</groupId>
+            <artifactId>iot-cloud-commons</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+
+        <!-- httpcomponents Begin -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+        </dependency>
+        <!-- httpcomponents End -->
+    </dependencies>
 </project>
