--- a/iot-cloud3/iot-cloud-web-api/src/main/resources/iot-cloud.properties
+++ b/iot-cloud3/iot-cloud-web-api/src/main/resources/iot-cloud.properties
@@ -16,3 +16,7 @@ jdbc.pool.maxActive=20
 
 # JDBC Test
 jdbc.testSql=SELECT 'x' FROM DUAL
+
+# API Setting
+api.path.v1 = /api/v1
+api.path.v2 = /api/v2
