与API模块通信

--- a/iot-cloud3/iot-cloud-web-console/src/main/resources/iot-cloud.properties
+++ b/iot-cloud3/iot-cloud-web-console/src/main/resources/iot-cloud.properties
@@ -5,3 +5,7 @@
 # views path
 web.view.prefix=/WEB-INF/views/
 web.view.suffix=.jsp
+
+# API Setting
+api.host=http://localhost:9090
+api.path=/api/v1
