完善API模块-登录

--- a/iot-cloud3/iot-cloud-commons/pom.xml
+++ b/iot-cloud3/iot-cloud-commons/pom.xml
@@ -100,5 +100,29 @@
             <artifactId>httpmime</artifactId>
         </dependency>
         <!-- Apache HttpClient End -->
+
+        <!-- Database Begin -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
+        <!-- Database End -->
     </dependencies>
 </project>
